<resources>
    <string name="app_name">Windows Mode Switch</string>
    <string name="windows_mode_switch">Windows Mode Switch</string>
    <string name="switch_to_window_11">Switch To Windows 11</string>
    <string name="check_root_status">Check Root Status</string>
    <string name="check_file_boot_in_sdcard_windows">Check file boot in /sdcard/windows</string>
    <string name="fail_file_boot">UEFI image not exist on /sdcard/windows</string>
    <string name="success_file_boot">UEFI image exist on /sdcard/windows</string>
    <string name="file_not_exist">/sdcard/windows/boot.img doesn\'t exist</string>
    <string name="loading">Switching ...</string>
    <string name="w11mode">Windows Mode</string>
    <string name="download_file_boot">Download UEFI image</string>
    <string name="guide">Guide</string>
    <string name="file_exist">UEFI image exist in download Folder</string>
    <string name="check_file_boot_in_sdcard">Check file boot in sdcard</string>
    <string name="crr_slot" translatable="false">Current slot</string>
    <string name="dump_boot_file" translatable="false">Dump boot file</string>
    <string name="dumped_file_boot" translatable="false">Dumped file boot in folder</string>
</resources>