<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/windows_mode_switch"
        android:maxLines="1"
        android:id="@+id/header_title"
        android:gravity="center"
        android:fontFamily="@font/u_light"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="50sp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/body1"
        android:layout_below="@id/header_title"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/btn_switch"
            android:paddingTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_margin="2dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/windows_11_icon"
                android:contentDescription="@string/switch_to_window_11" />
            <TextView
                android:id="@+id/text_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_to_window_11"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:fontFamily="@font/u_light"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/Btn_check_root"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ic_check"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_file"
                android:contentDescription="@string/check_file_boot_in_sdcard_windows" />
            <TextView
                android:id="@+id/text_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_root_status"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:fontFamily="@font/u_light"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@id/body1"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/download"
            android:paddingTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_margin="2dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_file_download"
                android:contentDescription="@string/switch_to_window_11" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_file_boot"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:fontFamily="@font/u_light"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:id="@+id/guideline"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_guide"
                android:contentDescription="@string/check_file_boot_in_sdcard_windows" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:fontFamily="@font/u_light"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>